# fastapi-ghaphql

./: .tbls.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.spec.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: hook_create_pr.yml  test.yml
app/: database.py  dependencies.py  exceptions.py  gql_context.py  main.py  models.py
app/cruds/: __init__.py  tenant.py  tenant_user.py
app/graphql/: __init__.py  mutation.py  query.py  schema.py
app/graphql/input/: tenant.py
app/graphql/resolvers/: __init__.py  post.py  tenant.py  tenant_user.py  user.py
app/graphql/types/: __init__.py  post.py  team.py  tenant.py  tenant_user.py  user.py
app/models/: __init__.py  _base.py  post.py  post_comment.py  post_like.py  right.py  right_role_mapping.py  role.py  service_plan.py  tenant.py  tenant_user.py
app/routers/: __init__.py  exceptions.py
app/routers/api/: __init__.py  tenant_users.py  users.py
app/routers/super/: __init__.py  tenants.py  users.py
app/schemas/: __init__.py  base.py  tenant.py  tenant_user.py
app/services/: __init__.py  authorization.py
app/usecase/: __init__.py  post.py  tenant.py  user.py
app/usecases/: __init__.py  tenant.py  tenant_user.py
app_tests/: conftest.py  test_models.py  util.py  utilities.py
app_tests/graphql/query/: test_tenant.py
app_tests/routers/api/: test_users.py
app_tests/routers/super/: test_tenants.py  test_users.py
app_tests/schemas/: test_base.py
app_tests/services/: test_authorization.py
db/: 000_create_db.sh  Dockerfile  README.md
doc/schema/: README.md  alembic_version.md  post_comments.md  post_likes.md  posts.md  right_role_mappings.md  rights.md  roles.md  service_plans.md  tenant_users.md  tenants.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init_empty.py  0002_add_base.py  0002_base.py  0003_add_like.py  0003_add_post.py
tests/: conftest.py  test_models.py  util.py  utilities.py
tests/graphql/query/: test_tenant.py
tests/routers/api/: test_users.py
tests/routers/super/: test_tenants.py  test_users.py
tests/schemas/: test_base.py
tests/services/: test_authorization.py
