[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = {extras = ["tz"], version = "^1.8.1"}
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.137.0"}

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.taskipy.variables]
python_src_dir = "app tests migrations"
flake_ignore = "E501,E203,W503,W504"

[tool.taskipy.tasks]
fmt = { cmd = "task black && task isort && task flake8", help = "format code" }
fmt_check = { cmd = "task black_check && task isort_check && task flake8", help = "format code with check option" }
serve = "uvicorn app.main:app --reload --host 0.0.0.0"
test = "pytest . -s"
black = { cmd = "black {python_src_dir}", use_vars = true }
black_check = { cmd = "black {python_src_dir} --check", use_vars = true }
isort = { cmd = "isort {python_src_dir}", use_vars = true }
isort_check = { cmd = "isort {python_src_dir} --check-only", use_vars = true }
flake8 = { cmd = "flake8 --ignore {flake_ignore} {python_src_dir}", use_vars = true }
load_data_local = "python -m tools.fixtures.development"
reset_db = "alembic downgrade 0001 && alembic upgrade head"
export = "poetry export -f requirements.txt --output ./requirements.txt"
