[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = {extras = ["tz"], version = "^1.8.1"}
SQLAlchemy = "^1.4.45"
PyMySQL = "^1.0.2"
uvicorn = "^0.19.0"
fastapi = "^0.88.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.142.2"}
requests = "^2.28.1"
httpx = "^0.23.1"
cryptography = "^38.0.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
debugpy = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.taskipy.variables]
python_src_dir = "app tests migrations"
flake_ignore = "E501,E203,W503,W504"

[tool.taskipy.tasks]
# 組み合わせ
fmt = { cmd = "task black && task isort && task flake8", help = "format code" }
fmt_check = { cmd = "task black_check && task isort_check && task flake8", help = "format code with check option" }
init = { cmd = "/wait && alembic upgrade head && task test"}

serve = "uvicorn app.main:app --reload --host 0.0.0.0"
test = "pytest . -s"
load_data_local = "python -m tools.fixtures.development"
reset_db = "alembic downgrade 0001 && alembic upgrade head"
export = "poetry export -f requirements.txt --output ./requirements.txt"

# format
black = { cmd = "black {python_src_dir}", use_vars = true }
black_check = { cmd = "black {python_src_dir} --check", use_vars = true }
isort = { cmd = "isort {python_src_dir}", use_vars = true }
isort_check = { cmd = "isort {python_src_dir} --check-only", use_vars = true }
flake8 = { cmd = "flake8 --ignore {flake_ignore} {python_src_dir}", use_vars = true }

